Fix Head-Body Desync
Keep head inside of collision body by moving collision body with head movement. Also sync hands with this. Got this working such hand position isn't broken with snap turn either.

--- a/VR_Climb/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/VR_Climb/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=640,Y=336)
+NewWindowPosition=(X=2880,Y=582)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -131,7 +131,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastExecutedPlayModeType=PlayMode_InVR
-MultipleInstancePositions=(X=640,Y=336)
+MultipleInstancePositions=(X=2880,Y=582)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -175,12 +175,9 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/VRPawn.VRPawn
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/BP_climbable.BP_climbable
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/GrabComponent.GrabComponent
 
 [RootWindow]
-ScreenPosition=X=498.000 Y=165.000
+ScreenPosition=X=2935.000 Y=552.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1356,10 +1353,10 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 InstalledPlugins=WMFCodecs
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/VRTemplate/Blueprints/GrabComponent
-MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
-MRUItem2=/Game/VRTemplate/Blueprints/BP_climbable
-MRUItem3=/Game/VRTemplate/Blueprints/VRPawn
+MRUItem0=/Game/VRTemplate/Blueprints/VRPawn
+MRUItem1=/Game/VRTemplate/Blueprints/GrabComponent
+MRUItem2=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
+MRUItem3=/Game/VRTemplate/Blueprints/BP_climbable
 MRUItem4=/Game/VRTemplate/Blueprints/Menu
 MRUItem5=/Game/VRTemplate/Blueprints/Pistol
 MRUItem6=/Game/VRTemplate/Blueprints/GrabType
@@ -1728,6 +1725,41 @@ CharacterMovementComponent.Character Movement: Jumping / Falling=True
 CharacterMovementComponent.Character Movement: Gravity=True
 Pistol_C.TransformCommon=True
 Pistol_C.Networking=True
+WidgetInteractionComponent.Variable=True
+WidgetInteractionComponent.TransformCommon=True
+WidgetInteractionComponent.Sockets=True
+WidgetInteractionComponent.Interaction=True
+WidgetInteractionComponent.Debugging=True
+WidgetInteractionComponent.ComponentTick=True
+WidgetInteractionComponent.Rendering=True
+WidgetInteractionComponent.Tags=True
+WidgetInteractionComponent.ComponentReplication=True
+WidgetInteractionComponent.Activation=True
+WidgetInteractionComponent.Cooking=True
+WidgetInteractionComponent.Events=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/VRTemplate/Blueprints/GrabType.GrabType=1
@@ -1792,14 +1824,14 @@ GraphEditorQuickJumps=()
 MRUItem0=/Game/VRTemplate/Maps/VRTemplateMap
 
 [DetailCustomWidgetExpansion]
-CapsuleComponent=
+CapsuleComponent=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
 PlayerStart=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision
 StaticMeshComponent=
 BP_climbable_C=CapsuleComponent.Collision.Collision
-SkeletalMeshComponent=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision
+SkeletalMeshComponent=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
 VRPawn_C=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
 EdGraph=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
-GrabComponent_C=GrabComponent_C.TransformCommon.Transform
+GrabComponent_C=
 K2Node_VariableGet=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
 K2Node_MacroInstance=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision
 MulticastInlineDelegatePropertyWrapper=GrabComponent_C.TransformCommon.Transform
@@ -1808,6 +1840,13 @@ Pistol_C=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,
 StaticMeshActor=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision
 UpdateClimb=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
 UpdateClimb_14=GrabComponent_C.TransformCommon.Transform
+K2Node_VariableSet=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
+K2Node_Variable=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
+HMDMovement=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
+HMDMovement_15=GrabComponent_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision
+MotionControllerComponent=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
+SceneComponent=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
+SnapTurn=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
 
 [DetailCategoriesAdvanced]
 Blueprint.ClassOptions=False
@@ -1819,25 +1858,36 @@ CapsuleComponent.ComponentTick=True
 CapsuleComponent.Rendering=False
 CapsuleComponent.Collision=True
 CapsuleComponent.Physics=False
+CapsuleComponent.Shape=False
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Tags.ComponentTags\" "
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
-Object=
-CapsuleComponent=
-ShapeComponent=
+MeshComponent="\"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.Tags.ComponentTags\" "
+Object="\"Object.Tags.ComponentTags\" "
+CapsuleComponent="\"Object.Tags.ComponentTags\" "
+ShapeComponent="\"Object.Tags.ComponentTags\" "
 VRPawn_C=
 Character=
 Pawn=
 BP_climbable_C="\"Object.Actor.Tags\" "
 GrabComponent_C=
+CameraComponent="\"Object.Tags.ComponentTags\" "
+MotionControllerComponent="\"Object.Tags.ComponentTags\" "
+WidgetInteractionComponent="\"Object.Tags.ComponentTags\" "
+CharacterMovementComponent="\"Object.Tags.ComponentTags\" "
+PawnMovementComponent="\"Object.Tags.ComponentTags\" "
+NavMovementComponent="\"Object.Tags.ComponentTags\" "
+MovementComponent="\"Object.Tags.ComponentTags\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/VRTemplate/Blueprints/BP_climbable.BP_climbable;
 
 [MessageLog]
 LastLogListing=PIE
+
+[SuppressableDialogs]
+DeleteConfirmationVariable_Warning=False
 
