Add layer infos
Add the landscape layer infos.

--- a/VR_Climb/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/VR_Climb/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=2880,Y=582)
+NewWindowPosition=(X=640,Y=336)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -131,7 +131,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastExecutedPlayModeType=PlayMode_InVR
-MultipleInstancePositions=(X=2880,Y=582)
+MultipleInstancePositions=(X=640,Y=336)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -178,7 +178,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
 
 [RootWindow]
-ScreenPosition=X=2935.000 Y=552.000
+ScreenPosition=X=1274.000 Y=7.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -195,7 +195,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/VR/Maps/VRTemplateMap_sharedassets
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -241,7 +241,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Tea/Documents/GitHub/FA24-AusdallTV/VR_Climb/Content/VRTemplate/Maps
+UNR=../../../../../../Users/Tea/Documents/GitHub/FA24-AusdallTV/VR_Climb/Content/VR/Maps
 BRUSH=../../../../../../Users/Tea/Documents/GitHub/FA24-AusdallTV/VR_Climb/Content/
 FBX=../../../../../../Users/Tea/Documents/GitHub/FA24-AusdallTV/VR_Climb/Content/
 FBXAnim=../../../../../../Users/Tea/Documents/GitHub/FA24-AusdallTV/VR_Climb/Content/
@@ -1347,6 +1347,8 @@ MovieSceneCapture.TimeStamp=2024.10.10-00.41.15
 MovieSceneCapture.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2024.10.10-00.41.14
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2024.10.10-00.41.15
+MaterialEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1968,6 +1970,27 @@ bUseUnsortedMenus=False
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+
+[LandscapeEdit]
+PaintToolStrength=0.300000012
+PaintBrushRadius=543.959595
+PaintBrushFalloff=0.5
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200
+bUseFlattenTarget=False
+FlattenTarget=0
+TerraceSmooth=9.99999975e-05
+TerraceInterval=1
+RampWidth=2000
+RampSideFalloff=0.400000006
+bCombinedLayersOperation=True
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=/Game/VR/Materials/LandscapeMat.LandscapeMat
+ImportLandscape_AlphamapType=0
+ShowUnusedLayers=True
 
 [MaterialEditor]
 PrimType=1
