--- a/VR_Climb/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/VR_Climb/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -166,7 +166,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/VRTemplate/Maps/VRTemplateMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -177,7 +177,6 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
-OpenAssetsAtExit=/Game/VR/Blueprints/Pistol.Pistol
 
 [RootWindow]
 ScreenPosition=X=1274.000 Y=7.000
@@ -1360,10 +1359,10 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 InstalledPlugins=WMFCodecs
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/VR/Blueprints/Grabbable_Sphere
-MRUItem1=/Game/VR/Blueprints/Pistol
-MRUItem2=/Game/VR/Blueprints/Grabbable_SmallCube
-MRUItem3=/Game/VR/Blueprints/VRPawn
+MRUItem0=/Game/VR/Blueprints/VRPawn
+MRUItem1=/Game/VR/Blueprints/Grabbable_Sphere
+MRUItem2=/Game/VR/Blueprints/Pistol
+MRUItem3=/Game/VR/Blueprints/Grabbable_SmallCube
 MRUItem4=/Game/VR/Blueprints/GrabComponent
 MRUItem5=/Game/VR/Materials/LandscapeMat
 MRUItem6=/Game/VR/Blueprints/Menu
@@ -2422,6 +2421,7 @@ Grabbable_Sphere_C.Events=True
 SkeletalMeshComponent.Materials=True
 Grabbable_Sphere_C.TransformCommon=True
 Grabbable_Sphere_C.Networking=True
+CharacterMovementComponent.AssetUserData=True
 
 [AssetEditorToolkitTabLocation]
 /Game/VRTemplate/Blueprints/GrabType.GrabType=1
@@ -2498,20 +2498,20 @@ CapsuleComponent=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.Constrain
 PlayerStart=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision
 StaticMeshComponent=
 BP_climbable_C=CapsuleComponent.Collision.Collision
-SkeletalMeshComponent=
-VRPawn_C=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform
-EdGraph=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
+SkeletalMeshComponent=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
+VRPawn_C=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
+EdGraph=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform
 GrabComponent_C=
 K2Node_VariableGet=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
 K2Node_MacroInstance=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision
 MulticastInlineDelegatePropertyWrapper=GrabComponent_C.TransformCommon.Transform
-PropertyWrapper=GrabComponent_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision
+PropertyWrapper=GrabComponent_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
 Pistol_C=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
 StaticMeshActor=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
-UpdateClimb=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
+UpdateClimb=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
 UpdateClimb_14=GrabComponent_C.TransformCommon.Transform
-K2Node_VariableSet=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
-K2Node_Variable=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
+K2Node_VariableSet=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
+K2Node_Variable=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
 HMDMovement=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
 HMDMovement_15=GrabComponent_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision
 MotionControllerComponent=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
@@ -2639,6 +2639,9 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Enhan
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 NiagaraDataInterfaceArrayFloat3=StaticMeshComponent.Collision.Collision
 Grabbable_Sphere_C=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
+K2Node_CallFunction=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
+MovementComponent=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
+CharacterMovementComponent=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
 
 [DetailCategoriesAdvanced]
 Blueprint.ClassOptions=False
@@ -2653,28 +2656,29 @@ CapsuleComponent.Physics=False
 CapsuleComponent.Shape=False
 StaticMeshComponent.Collision=True
 StaticMeshActor.Collision=False
+K2Node_VariableGet.Variable=False
 
 [DetailPropertyExpansion]
 StaticMeshComponent=
 MeshComponent=
 PrimitiveComponent=
 SceneComponent=
-ActorComponent=
-Object=
+ActorComponent="\"Object.NavMovement.NavAgentProps\" "
+Object="\"Object.NavMovement.NavAgentProps\" "
 CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-VRPawn_C="\"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Character="\"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Pawn="\"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+VRPawn_C=
+Character=
+Pawn=
 BP_climbable_C="\"Object.Actor.Tags\" "
 GrabComponent_C=
 CameraComponent="\"Object.Tags.ComponentTags\" "
 MotionControllerComponent="\"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
 WidgetInteractionComponent="\"Object.Tags.ComponentTags\" "
-CharacterMovementComponent="\"Object.Tags.ComponentTags\" "
-PawnMovementComponent="\"Object.Tags.ComponentTags\" "
-NavMovementComponent="\"Object.Tags.ComponentTags\" "
-MovementComponent="\"Object.Tags.ComponentTags\" "
+CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object.NavMovement.NavAgentProps\" "
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[0]\" \"Object.Layers.Layers[1]\" "
 MaterialExpression="\"Object.Layers\" \"Object.Layers.Layers[0]\" \"Object.Layers.Layers[1]\" "
 ProjectPackagingSettings="\"Object.Packaging.IniSectionDenylist\" "
@@ -2747,7 +2751,7 @@ RecentlyPlaced=/Game/VR/Blueprints/Grabbable_Sphere.Grabbable_Sphere;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/BP_climbable.BP_climbable;
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
