Further reduce max step height
Step height can cause snapping to floor on release from climbing & other weird physics behavior. So having it be the minimum amount that is reasonable to use for level is ideal (currently the only step is 5cm so it is set to 6cm)

--- a/VR_Climb/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/VR_Climb/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -177,6 +177,7 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
+OpenAssetsAtExit=/Game/VR/Blueprints/VRPawn.VRPawn
 
 [RootWindow]
 ScreenPosition=X=1274.000 Y=7.000
@@ -2422,6 +2423,23 @@ SkeletalMeshComponent.Materials=True
 Grabbable_Sphere_C.TransformCommon=True
 Grabbable_Sphere_C.Networking=True
 CharacterMovementComponent.AssetUserData=True
+Landscape.TransformCommon=True
+Landscape.Information=True
+Landscape.Landscape=True
+Landscape.LOD=True
+Landscape.Nanite=True
+Landscape.LOD Distribution=True
+Landscape.Lighting=True
+Landscape.VirtualTexture=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.Navigation=True
+Landscape.HLOD=True
+Landscape.Replication=True
+Landscape.Networking=True
+Landscape.Input=True
+Landscape.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/VRTemplate/Blueprints/GrabType.GrabType=1
@@ -2507,7 +2525,7 @@ K2Node_MacroInstance=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.Const
 MulticastInlineDelegatePropertyWrapper=GrabComponent_C.TransformCommon.Transform
 PropertyWrapper=GrabComponent_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
 Pistol_C=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
-StaticMeshActor=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
+StaticMeshActor=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,GrabComponent_C.TransformCommon.Transform
 UpdateClimb=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
 UpdateClimb_14=GrabComponent_C.TransformCommon.Transform
 K2Node_VariableSet=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
@@ -2515,7 +2533,7 @@ K2Node_Variable=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.Constraint
 HMDMovement=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
 HMDMovement_15=GrabComponent_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision
 MotionControllerComponent=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
-SceneComponent=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
+SceneComponent=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,GrabComponent_C.TransformCommon.Transform
 SnapTurn=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
 BP_Sky_Sphere_C=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
 DirectionalLight=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
@@ -2642,6 +2660,7 @@ Grabbable_Sphere_C=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.Constra
 K2Node_CallFunction=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
 MovementComponent=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
 CharacterMovementComponent=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,VRPawn_C.TransformCommon.Transform,GrabComponent_C.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
+Landscape=CapsuleComponent.Collision.Collision,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,GrabComponent_C.TransformCommon.Transform
 
 [DetailCategoriesAdvanced]
 Blueprint.ClassOptions=False
@@ -2663,8 +2682,8 @@ StaticMeshComponent=
 MeshComponent=
 PrimitiveComponent=
 SceneComponent=
-ActorComponent="\"Object.NavMovement.NavAgentProps\" "
-Object="\"Object.NavMovement.NavAgentProps\" "
+ActorComponent=
+Object=
 CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
 VRPawn_C=
