Fix camera clipping + max velocity
Adjust player collider size, near clipping plane, and add a maximum velocity for throwing oneself from a climbing point. Also adjust gravity on player somewhat.

--- a/VR_Climb/Config/DefaultEngine.ini
+++ b/VR_Climb/Config/DefaultEngine.ini
@@ -349,6 +349,7 @@ bAllowClientSideNavigation=True
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_VirtualRealityBP",NewGameName="/Script/VR_Climb")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_VirtualRealityBP",NewGameName="/Script/VR_Climb")
+NearClipPlane=0.500000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
