--- a/VR_Climb/Config/DefaultEngine.ini
+++ b/VR_Climb/Config/DefaultEngine.ini
@@ -132,7 +132,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
+EditorStartupMap=/Game/VR/Maps/VR_Map.VR_Map
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -141,7 +141,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
+GameDefaultMap=/Game/VR/Maps/VR_Map.VR_Map
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
 GlobalDefaultServerGameMode=None
